# CarResearch

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: poetry_ci.yml
car_researcher/collate/: kbb_listing.py  search.py  sheets.py
car_researcher/scrape/: fetch.py  kbb_listing.py  kbb_listings.py  kbb_search.py  scrape_utils.py
config/: collate.json
data/: .gitignore
tests/scrape/: fetch.py  test_kbb_listing.py  test_kbb_search.py
tests/vectors/html/: kbb_listing.html  kbb_search.html
