[tool.poetry]
name = "carresearch"
version = "0.1.0"
description = ""
authors = ["Reuben John <rmjohn2@ncsu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
requests-html = "^0.10.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
scrape-listing="car_research.scrape.kbb_listing"