[tool.poetry]
name = "car_researcher"
version = "0.1.0"
description = "Automates some of the car researching process in the US market through web scraping"
authors = ["Reuben John <rmjohn2@ncsu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
selenium = "^4.10.0"
beautifulsoup4 = "^4.12.2"
google-api-python-client = "^2.91.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
scrape-listing = "car_researcher.scrape.kbb_listing:main"
scrape-listings = "car_researcher.scrape.kbb_listings:main"
scrape-search = "car_researcher.scrape.kbb_search:main"
sheets-append = "car_researcher.collate.sheets:main"
